--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node ./src/index"
+    "dev": "ts-node ./src/index",
+    "test": "ts-node ./index"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,11 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "cheerio": "^1.0.0-rc.3",
     "crypto": "^1.0.1",
     "fluent-ffmpeg": "^2.1.2",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "lzutf8": "^0.5.6",
+    "md5": "^2.3.0"
   }
 }
